# pgscatalog_utils

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  conftest.py  install.sh  main.py  pyproject.toml
.github/workflows/: main.yml  push_dev_image.yml  push_docker_dev.yml  push_image_release.yml  push_singularity_dev.yml  pypi_publish.yml
example_notebooks/: PGS_Ancestry_Adjustment.ipynb
pgscatalog_utils/: config.py  log_config.py  logs.py  pgsexceptions.py  score.py  target.py
pgscatalog_utils/aggregate/: aggregate_matches.py  aggregate_scores.py
pgscatalog_utils/ancestry/: ancestry_analysis.py  constants.py  read.py  tools.py
pgscatalog_utils/download/: Catalog.py  CatalogCategory.py  CatalogQuery.py  GenomeBuild.py  ScoringFile.py  ScoringFileChecksum.py  ScoringFileDownloader.py  api.py  download_file.py  download_scorefile.py  publication.py  score.py  trait.py
pgscatalog_utils/match/: combine_matches.py  filter.py  label.py  log.py  match.py  match_variants.py  postprocess.py  preprocess.py  read.py  tempdir.py  write.py
pgscatalog_utils/relabel/: relabel_ids.py
pgscatalog_utils/samplesheet/: Config.py  check.py
pgscatalog_utils/scorefile/: combine.py  combine_scorefiles.py  config.py  effect_type.py  effect_weight.py  effectallele.py  effecttype.py  genome_build.py  harmonised.py  header.py  liftover.py  log.py  qc.py  read.py  scorevariant.py  scoringfile.py  scoringfileheader.py  write.py
pgscatalog_utils/validate/: schemas.py  validate_scorefile.py  validator_base.py
pgscatalog_utils/validate/formatted/: validator.py
pgscatalog_utils/validate/harmonized_position/: validator.py
tests/: test_aggregate.py  test_combine.py  test_download.py  test_liftover.py  test_match.py  test_pgscatalog_utils.py  test_samplesheet.py  test_validate.py
tests/data/combine/: PGS001229_22.txt
tests/match/: test_combine.py  test_label.py  test_match.py
